Fix list overflow

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -78,6 +78,7 @@ span.Resizer.horizontal::before {
     background: #393939;
     height: 100%;
     width: 100%;
+    overflow-y: auto;
 }
 
 .terminal-pane {
